--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
 
 	</div>
 	<div class="contact-form">
-		<form action="https://formsubmit.co/5faab0b62b43bf257e8147fd9a6659df" method="POST">
-			<input type="name" name="name" placeholder="Your Name " required>
-			<input type="email" name="email" placeholder="Your Email " required>
-			<input type="number" name="number" placeholder="your Mobile Number" required>
-			<textarea name="message" id="" cols="35" rows="10"  placeholder="How Can I Help You " required></textarea>
+		<form action="">
+			<input type="name"  placeholder="Your Name " required>
+			<input type="email" placeholder="Your Email " required>
+			<input type="number"placeholder="your Mobile Number" required>
+			<textarea name="" id="" cols="35" rows="10"  placeholder="How Can I Help You " required></textarea>
 			<input type="submit" value="Send Message" class="submit" required>
 		</form>
 
