--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			<img src="img/project4.jpg" >
 			<div class="layer">
 				<h5>Visual Design</h5>
-				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
+				<p>Check out 10 best Design's updates for the top web design & development companies.</p>
 				<a href="#"> <i class='bx bx-link-external'></i></a>
 			</div>
 		</div>
@@ -142,7 +142,7 @@
 			<img src="img/project5.jpg" >
 			<div class="layer">
 				<h5>Visual Design</h5>
-				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
+				<p>Check out 10 best Design's updates for the top web design & development companies.</p>
 				<a href="#"> <i class='bx bx-link-external'></i></a>
 			</div>
 		</div>
@@ -151,7 +151,7 @@
 			<img src="img/project6.jpg" >
 			<div class="layer">
 				<h5>Visual Design</h5>
-				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
+				<p>Check out 10 best Design's updates for the top web design & development companies.</p>
 				<a href="#"> <i class='bx bx-link-external'></i></a>
 			</div>
 		</div>
@@ -164,7 +164,7 @@
 	<div class="contact-text">
 		<h2>Contact <span>Me!</span></h2>
 		<h4>If you have any project in your mind.</h4>
-		<p>I'm a website Designer - creating bold & brave interface design for compaines all across the world.</p>
+		<p>I'm a website Designer - creating bold & brave interface design for companies all across the world.</p>
 		<div class="list">
 			<li><a href="#">+917671934871</a></li>
 			<li><a href="#">srijasagi2002@gmail.com</a></li>
@@ -180,7 +180,8 @@
 
 	</div>
 	<div class="contact-form">
-		<form action="">
+		<form action="https://api.web3forms.com/submit" method="POST">
+<input type="hidden" name="access_key" value="d4ccd3f4-7ec3-44fd-902b-4460ea7fd523">
 			<input type="name"  placeholder="Your Name " required>
 			<input type="email" placeholder="Your Email " required>
 			<input type="number"placeholder="your Mobile Number" required>
