--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
 	<div class="contact-form">
 		<form action="https://api.web3forms.com/submit" method="POST">
 <input type="hidden" name="access_key" value="d4ccd3f4-7ec3-44fd-902b-4460ea7fd523">
-			<input type="name"  placeholder="Your Name " required>
-			<input type="email" placeholder="Your Email " required>
-			<input type="number"placeholder="your Mobile Number" required>
-			<textarea name="" id="" cols="35" rows="10"  placeholder="How Can I Help You " required></textarea>
+			<input type="name" name="name" placeholder="Your Name " required>
+			<input type="email" name="email" placeholder="Your Email " required>
+			<input type="number" name="number"placeholder="your Mobile Number" required>
+			<textarea name="" id="" cols="35" rows="10" name="message" placeholder="How Can I Help You " required></textarea>
 			<input type="submit" value="Send Message" class="submit" required>
 		</form>
 
