--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
 			<input type="name" name="name" placeholder="Your Name " required>
 			<input type="email" name="email" placeholder="Your Email " required>
 			<input type="number" name="number"placeholder="your Mobile Number" required>
-			<textarea name="" id="" cols="35" rows="10" name="message" placeholder="How Can I Help You " required></textarea>
+			<textarea name="text" id="" cols="35" rows="10" placeholder="How Can I Help You" required></textarea>
+
 			<input type="submit" value="Send Message" class="submit" required>
 		</form>
 
