--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<link rel="stylesheet"href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+<style>
+		.whatsapp-btn {
+			position: fixed;
+			bottom: 20px;
+			right: 20px;
+			background-color: green;
+			color: #fff;
+			padding: 10px 15px;
+			border-radius: 50%;
+			font-size: 24px;
+			z-index: 9999;
+			text-decoration: none;
+			box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+		}
+</style>
+
 </head>
 <body>
 
@@ -44,7 +60,7 @@
 			</div>
 		</div>
 	</section>
-
+<a href="https://wa.me/yourphonenumber" class="whatsapp-btn" target="_blank">WhatsApp</a>
 	<!---------about Section --------------->
 
 	<section class="about" id="about">
