--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
 	<link rel="stylesheet"href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 <style>
-		.whatsapp-btn {
-			position: fixed;
-			bottom: 20px;
-			right: 20px;
-			background-color: green;
-			color: #fff;
-			padding: 10px 15px;
-			border-radius: 50%;
-			font-size: 24px;
-			z-index: 9999;
-			text-decoration: none;
-			box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-		}
+	.whatsapp-btn {
+		position: fixed;
+		bottom: 20px;
+		right: 20px;
+		background-color: green;
+		color: #fff;
+		padding: 10px;
+		border-radius: 50%;
+		font-size: 24px;
+		z-index: 9999;
+		text-decoration: none;
+		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+	}
 </style>
 
 </head>
