--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			</div>
 		</div>
 	</section>
-<a href="https://wa.me/yourphonenumber" class="whatsapp-btn" target="_blank">WhatsApp</a>
+<a href="https://wa.me/+917671934871" class="whatsapp-btn" target="_blank">WhatsApp</a>
 	<!---------about Section --------------->
 
 	<section class="about" id="about">
